# 01-ai-engg-bootcamp

./: .env.example  .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
documentation/Intro/: Project_Overview.md
evals/: eval_retriever.py
notebooks/: 01-llm-apiskeys.ipynb  02-RAG-preprocessing.ipynb
src/: chatbot_ui
src/chatbot-ui/: retrieval.py  streamlit_app.py
src/chatbot-ui/core/: config.py
