[project]
name = "01-ai-engg-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
    "google-genai",
    "groq",
    "openai",
    "pydantic",
    "streamlit",
    "qdrant-client",
    "langsmith"
]
